--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -1974,3 +1974,16 @@ tagline {
   background-image: url("https://nearsoft.com/wp-content/uploads/2019/06/linkedinlogo.png");
   background-size: contain;
 }
+.hover .img-cont-fixed {
+  box-shadow: 0 0 0 ();
+  transition: ease-in all .1s;
+}
+
+.hover:hover .img-cont-fixed {
+  transform: translateY(calc(var(--spc-half) * -1));
+  box-shadow: var(--shadow-big);
+}
+
+.hover:hover a {
+  background-size: 100% 100%,100% 100%;
+}
