--- a/css-readable/main.css
+++ b/css-readable/main.css
@@ -1974,6 +1974,17 @@ tagline {
   background-image: url("https://nearsoft.com/wp-content/uploads/2019/06/linkedinlogo.png");
   background-size: contain;
 }
+
+@media all and (max-width: 980px) {
+  .social-btns {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .social-btn {
+    margin: 0 0 1rem 0;
+  }
+}
 .hover .img-cont-fixed {
   box-shadow: 0 0 0 ();
   transition: ease-in all .1s;
