--- a/styles/debris.css
+++ b/styles/debris.css
@@ -160,3 +160,14 @@
   background-image: url(https://nearsoft.com/wp-content/uploads/2019/06/linkedinlogo.png);
   background-size: contain;
 }
+
+@media all and (max-width: 980px) {
+  .social-btns {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .social-btn {
+    margin: 0 0 1rem 0;
+  }
+}
