--- a/styles/footer.css
+++ b/styles/footer.css
@@ -40,7 +40,7 @@ footer a:hover {
 
 .footer-logo {
   width: 50%;
-  filter: brightness(100);
+  filter: brightness(0) invert(1);
 }
 
 .subfooter svg {
